# emilia

./: .gitignore  BUILDING.md  CREDITS.md  Cargo.toml  FLATHUB.md  Makefile  PLAN.md  README.md  de.cais.Emilia.flathub.yaml  de.cais.Emilia.yaml  generated-sources.json  index.html
.github/workflows/: ci.yml
data/: de.cais.Emilia.desktop  de.cais.Emilia.flatpakrepo  de.cais.Emilia.gpg  de.cais.Emilia.metainfo.xml
po/: LINGUAS  POTFILES.in  ar.po  de.po  emilia.pot  es.po  fr.po  it.po  nl.po  pl.po  pt.po  ru.po  sw.po  zh.po
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/summaries/: 050689ee29f3e1844a7c8f428f8dbb46dcb2b25ad44fc82c24c0436629a2e044-bfe4f62800ed8086d29379189564bf2bf7c4992190a5831c243214dfd028f171.delta  41547b5df05d33909144bc1b5a65588b938ebe48b88e1f8dacb2d14779175cd1-bfe4f62800ed8086d29379189564bf2bf7c4992190a5831c243214dfd028f171.delta  75cc61ae0a1be91add458b079e2626bfe20379ec5cdf51a1e6bd0ad56188e70c-8204a187d7539429d781a19b4dcdedc496b0dafaf1f4c61ccab762b933b4e495.delta  7600f50cebcc50438d0d819001ae602564731c36207d44ca429c66176253229c-0e8f6f7d6716d31ee38b0482798b3c1ac19b235ebd53981f4df59f72a7b59134.delta  937facbd1834ffbfe97a48beb6c442bfc60be916e85ba5bf9747cf4ae69ca923-bfe4f62800ed8086d29379189564bf2bf7c4992190a5831c243214dfd028f171.delta  a2305ccaa53d04339d932884f33f6ffad195c24eed8930605692112729ad7915-5c8154ebf8667d65391441d0d3df505ae317e0b8b04194b1599f9cfa0a55cb75.delta  a2305ccaa53d04339d932884f33f6ffad195c24eed8930605692112729ad7915-e45dae166f514c3c6a96c091436449825b141e9f3df37d7739dc064828c34d52.delta  a2305ccaa53d04339d932884f33f6ffad195c24eed8930605692112729ad7915-f32dd214a70f89866dd3903edd5bcde6d5979fff7497503f353a55edd31aec17.delta  a70bd2da8262d0ed418b15680e8ca02fe80d34fc880dca7930bdc43d8140dce7-e45dae166f514c3c6a96c091436449825b141e9f3df37d7739dc064828c34d52.delta  a70bd2da8262d0ed418b15680e8ca02fe80d34fc880dca7930bdc43d8140dce7-f32dd214a70f89866dd3903edd5bcde6d5979fff7497503f353a55edd31aec17.delta  b14b5d9681cd0cd84f916b80edba3e3f75876a434f1b22c643621510a13917f7-bfe4f62800ed8086d29379189564bf2bf7c4992190a5831c243214dfd028f171.delta  bb2e86a676cc107dba3186590e190b0650285e36b509b50832b7fc6e6b7567b8-8204a187d7539429d781a19b4dcdedc496b0dafaf1f4c61ccab762b933b4e495.delta  bb2e86a676cc107dba3186590e190b0650285e36b509b50832b7fc6e6b7567b8-bfe4f62800ed8086d29379189564bf2bf7c4992190a5831c243214dfd028f171.delta  bfe4f62800ed8086d29379189564bf2bf7c4992190a5831c243214dfd028f171-0e8f6f7d6716d31ee38b0482798b3c1ac19b235ebd53981f4df59f72a7b59134.delta  d46cceacef993ce254b6d7ea39dbf38b4febf2f04afa373f7ca72dc29f4dd2e3-5c8154ebf8667d65391441d0d3df505ae317e0b8b04194b1599f9cfa0a55cb75.delta  d46cceacef993ce254b6d7ea39dbf38b4febf2f04afa373f7ca72dc29f4dd2e3-e45dae166f514c3c6a96c091436449825b141e9f3df37d7739dc064828c34d52.delta  d46cceacef993ce254b6d7ea39dbf38b4febf2f04afa373f7ca72dc29f4dd2e3-f32dd214a70f89866dd3903edd5bcde6d5979fff7497503f353a55edd31aec17.delta  e184a67ab28ee1c5ab44e93dbff9023ed05782e908af7a5951e107aa41584664-bfe4f62800ed8086d29379189564bf2bf7c4992190a5831c243214dfd028f171.delta  e328001f085690345f9d61da9416e780135095d261537a7fcd22c2f1a964cda1-f32dd214a70f89866dd3903edd5bcde6d5979fff7497503f353a55edd31aec17.delta  f2d42cda1ca1b86c865d7c952bf3ac009fcc0bb82a9689cdd7a867f5b5751033-0e8f6f7d6716d31ee38b0482798b3c1ac19b235ebd53981f4df59f72a7b59134.delta  f339f26c2560778ae45b038610b84f75b667361253017ba87706c9d27ca1bc55-f32dd214a70f89866dd3903edd5bcde6d5979fff7497503f353a55edd31aec17.delta  f34fc88de5ef73c7963bac097f15e32e92389d5239c926a3991aea6b475faae3-e45dae166f514c3c6a96c091436449825b141e9f3df37d7739dc064828c34d52.delta  fb29bb96845f03c501e802f8c719ef45d1acc0b71c6137d502dbad309b5636bf-e45dae166f514c3c6a96c091436449825b141e9f3df37d7739dc064828c34d52.delta
scripts/: sync-flathub.sh
src/: i18n.rs  main.rs  model.rs
src/core/: artist.rs  category.rs  concert.rs  cover.rs  db.rs  fingerprint.rs  lyrics.rs  mic.rs  mod.rs  mpris.rs  net.rs  online.rs  output.rs  player.rs  podcast.rs  proc.rs  recorder.rs  scanner.rs  secrets.rs  source.rs  streaming.rs  tray.rs  update.rs  waveform.rs  webdav.rs  youtube.rs
src/ui/: album_row.rs  app.rs  app_assistant.rs  app_cloud.rs  app_concert.rs  app_covers.rs  app_dialogs.rs  app_episode_playback.rs  app_eq.rs  app_favorites.rs  app_filter.rs  app_focus.rs  app_gallery.rs  app_gapless.rs  app_helpers.rs  app_init.rs  app_lyrics.rs  app_mcp.rs  app_memo.rs  app_nav.rs  (+36 more)
(+168 files in other folders)
