[package]
name = "emilia"
version = "0.1.0"
edition = "2021"
description = "Adaptiver Musik- & Hörspielplayer für Phosh (GTK4/libadwaita)"
license = "GPL-3.0-or-later"

[dependencies]
relm4 = { version = "0.9", features = ["libadwaita", "gnome_46"] }
relm4-components = "0.9"
gtk = { version = "0.9", package = "gtk4" }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gstreamer = "0.23"
lofty = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
